policies/kubernetes-actions-port-forward-to-pod.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: kubernetes-actions-port-forward-to-pod
spec:
  categories:
  - Kubernetes Events
  criteriaLocked: true
  description: Alerts when Kubernetes API receives port forward request
  enforcementActions: []
  eventSource: DEPLOYMENT_EVENT
  exclusions:
  - name: Don't alert on deployment alertmanager-main in openshift-monitoring namespace
    deployment:
      name: alertmanager-main
      scope:
        cluster: ''
        namespace: openshift-monitoring
        label: null
    image: null
    expiration: null
  isDefault: false
  lifecycleStages:
  - RUNTIME
  mitreAttackVectors:
  - tactic: TA0002
    techniques:
    - T1609
  mitreVectorsLocked: true
  policyName: 'GitOps - Kubernetes Actions: Port Forward to Pod'
  policySections:
  - sectionName: ''
    policyGroups:
    - fieldName: Kubernetes Resource
      booleanOperator: OR
      negate: false
      values:
      - value: PODS_PORTFORWARD
  rationale: '''pods/portforward'' is non-standard way to access applications running
    on Kubernetes. Attackers with permissions could gain access to application and
    compromise it'
  remediation: Restrict RBAC access to the 'pods/portforward' resource according to
    the Principle of Least Privilege. Limit exposing application through port forwarding
    only development, testing or debugging (non-production) activities. For external
    traffic, expose application through a LoadBalancer/NodePort service or Ingress
    Controller
  scope: []
  severity: MEDIUM_SEVERITY
  disabled: false
